selene-lib/tests/full_run/plugins/incomplete_function_calls/incomplete_function_calls.lua
local function my_function(_x, _y, _z) end

my_function(1, 2, 3)
my_function(1)
bad_function()
